--- a/WebContent/cadastroFuncionario.html
+++ b/WebContent/cadastroFuncionario.html
@@ -7,7 +7,7 @@
 <body>
 	<form action="CadastroFuncionario" method="post">
 		<label>nome
-			<input type='text'  name='name'>
+			<input type='text'  name='nome'>
 		</label>
 		<label>cargo
 			<input type='text'  name='cargo'>
